refactored KvUtils.validate method